Skip hidden directories while scanning the collection

BUG: 115478

svn path=/branches/stable/extragear/multimedia/amarok/; revision=529214